--- a/Nested/Nested.html
+++ b/Nested/Nested.html
@@ -15,7 +15,7 @@
 			s += '\n';
 		}
 
-		for (var k = 0; k < i; k++) {
+		for (var k = 0; k <= i; k++) {
 			for (var l = 10; l >= k ;l--) {
 				s += '*';
 			}
