--- a/Nested/Nested2.html
+++ b/Nested/Nested2.html
@@ -18,7 +18,7 @@
 			s += '\n';
 		}
 
-		for (var l = 0; l <= i; l++) {
+		for (var l = 0; l <= k; l++) {
 			for (var m = 0; m <= l ;m++) {
 				s += ' ';
 			}
